# AgentDesktop

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Readme.md  build_and_test.ps1  diag_desktop.cpp
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MCP.md
scripts/: build.ps1  build.sh
src/: main.cpp
src/app/: App.cpp  App.h  LogEntry.h  Theme.cpp  Theme.h
src/capture/: CaptureThread.cpp  CaptureThread.h  FrameHash.h
src/mcp/: ImageEncoder.cpp  ImageEncoder.h  McpServer.cpp  McpServer.h  McpTools.cpp  McpTools.h
src/platform/: Platform.h  PlatformLinux.cpp  PlatformMac.mm  PlatformWin.cpp
tests/: CMakeLists.txt  test_frame_hash.cpp  test_image_encoder.cpp  test_integration.cpp  test_mcp_dispatch.cpp  test_platform_mock.cpp
